src/commands/mcp/tui/snapshots/ralph_wiggum__commands__mcp__tui__choice_select__tests__snapshot_50_options_focus_last.snap
---
source: src/commands/mcp/tui/choice_select.rs
expression: snapshot
---
  Choice 41  Desc 41
  Choice 42  Desc 42
  Choice 43  Desc 43
  Choice 44  Desc 44
  Choice 45  Desc 45
  Choice 46  Desc 46
  Choice 47  Desc 47
  Choice 48  Desc 48
  Choice 49  Desc 49
> Choice 50  Desc 50
