src/commands/mcp/tui/snapshots/ralph_wiggum__commands__mcp__tui__choice_select__tests__snapshot_50_options_no_descriptions.snap
---
source: src/commands/mcp/tui/choice_select.rs
expression: snapshot
---
  Item 029
  Item 030
  Item 031
  Item 032
  Item 033
  Item 034
  Item 035
  Item 036
  Item 037
  Item 038
  Item 039
> Item 040
