src/commands/mcp/tui/snapshots/ralph_wiggum__commands__mcp__tui__choice_select__tests__snapshot_50_plus_options_focus_middle.snap
---
source: src/commands/mcp/tui/choice_select.rs
expression: snapshot
---
  Option 11  Description for option 11
  Option 12  Description for option 12
  Option 13  Description for option 13
  Option 14  Description for option 14
  Option 15  Description for option 15
  Option 16  Description for option 16
  Option 17  Description for option 17
  Option 18  Description for option 18
  Option 19  Description for option 19
  Option 20  Description for option 20
  Option 21  Description for option 21
  Option 22  Description for option 22
  Option 23  Description for option 23
  Option 24  Description for option 24
> Option 25  Description for option 25
