src/commands/mcp/tui/snapshots/ralph_wiggum__commands__mcp__tui__choice_select__tests__snapshot_empty_options_list.snap
---
source: src/commands/mcp/tui/choice_select.rs
expression: snapshot
---
> Other  type your answer
