src/commands/mcp/tui/snapshots/ralph_wiggum__commands__mcp__tui__choice_select__tests__snapshot_list_3_options_focus_first.snap
---
source: src/commands/mcp/tui/choice_select.rs
expression: snapshot
---
> Option Alpha
  Option Beta
  Option Gamma
  Other  type your answer
