src/commands/mcp/tui/snapshots/ralph_wiggum__commands__mcp__tui__choice_select__tests__snapshot_many_options_scrolling.snap
---
source: src/commands/mcp/tui/choice_select.rs
expression: snapshot
---
  Item 1
  Item 2
  Item 3
  Item 4
  Item 5
> Item 6
