src/commands/mcp/tui/snapshots/ralph_wiggum__commands__mcp__tui__choice_select__tests__snapshot_narrow_terminal_highlight_visible.snap
---
source: src/commands/mcp/tui/choice_select.rs
expression: snapshot
---
  VeryLongOptio
> AnotherLongOp
  ShortOpt
  Other  type y
