src/commands/mcp/tui/snapshots/ralph_wiggum__commands__mcp__tui__choice_select__tests__snapshot_narrow_terminal_long_options.snap
---
source: src/commands/mcp/tui/choice_select.rs
expression: snapshot
---
> Very Long Opt
  Another Super
  Third Extreme
  Other  type y
