src/commands/mcp/tui/snapshots/ralph_wiggum__commands__mcp__tui__choice_select__tests__snapshot_narrow_terminal_with_description.snap
---
source: src/commands/mcp/tui/choice_select.rs
expression: snapshot
---
  Authentication  Us
> API Endpoints  RES
  Other  type your a
