src/commands/mcp/tui/snapshots/ralph_wiggum__commands__mcp__tui__choice_select__tests__snapshot_options_with_description.snap
---
source: src/commands/mcp/tui/choice_select.rs
expression: snapshot
---
  Auth  Authentication module
> API  REST API endpoints
  Logging  Application logging
  Other  type your answer
