src/commands/mcp/tui/snapshots/ralph_wiggum__commands__mcp__tui__choice_select__tests__snapshot_single_option.snap
---
source: src/commands/mcp/tui/choice_select.rs
expression: snapshot
---
> Only Choice  This is the only option
  Other  type your answer
